- examples: added testIO.py to read external MSH, perform CVD growth and export surface atoms or updated mesh
- analysis.py: added export_xyz() to export coverage or surface atoms from output xyz snapshots
- io.py: added sockets related routines ; added value=20 for air in LA ; added get_boxsize_from_mesh()
- setuprun.py: added setup_mulskips_src() and compile_mulskips() routines to enable box update without changing defsystem.f by hand ; modified print_file_input() to enable LA (also defected) and CVD of SiGe ; added sockets functionalities
- process.py: added SiGe_X material calibration for LA
- added sockets.py for f2py usage
- updated __init__.py

--- a/mulskips-source/makefile
+++ b/mulskips-source/makefile
@@ -56,4 +56,5 @@ $(DESTDIR)/mulskips.e:	$(OBJS)
 	$(FC)  $(FFLAGS) $(OBJS) -o $(DESTDIR)/mulskips.e # $(LIB) 
 #	$(FC)  $(FFLAGS) $(OBJS) -o $(DESTDIR)/code14.e $(LIB) -lm -lc
 #	$(FC)  $(FFLAGS) $(OBJS) -o $(DESTDIR)/code14.e $(LIB) -lm -lc -L/usr/lib/libphpfp.a \
-#	-L/usr/lib/libshpf.a -L/usr/lib/libphpf.a -L/usr/lib/libc.a 
+#	-L/usr/lib/libshpf.a -L/usr/lib/libphpf.a -L/usr/lib/libc.a
+	@echo Compilation terminated
