--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,6 +1,9 @@
 # Minimal makefile for Sphinx documentation
 #
 
+default: html
+	make html
+
 # You can set these variables from the command line, and also
 # from the environment for the first two.
 SPHINXOPTS    ?=
